--- a/templates/email_blast.html
+++ b/templates/email_blast.html
@@ -10,8 +10,8 @@
     {% endfor%}
 </section>
     
-<section class="my-5 bg-light">
-    <div class="mx-5">
+<section class="my-3 my-md-5 bg-light">
+    <div class="mx-2 mx-md-5">
         <div class="row mb-4">
             <div class="col-12 text-center">
                 <h1 class="text-primary my-auto"><b>NEWSLETTER</b></h1>
@@ -19,7 +19,7 @@
         </div>
         <form action="/emailblast" method="post">
             <div class="row justify-content-center">
-                <div class="col-4">
+                <div class="col-12 col-md-8 col-lg-4 mb-4 my-md-4 my-lg-0">
                     <div class="card">
                         <div class="card-header bg-success">
                             <h3 class="text-light my-auto"><b>Sender</b></h3>
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-8 col-lg-6">
                     <div class="card">
                         <div class="card-header bg-primary">
                             <h3 class="text-light my-auto"><b>Recipient</b></h3>
